--- a/game/Layouts/MAIN.xml
+++ b/game/Layouts/MAIN.xml
@@ -273,11 +273,11 @@
                         <x>413</x>
                         <y>866</y>
                         <z>0</z>
-                        <width>113.713821411</width>
-                        <height>98.580802917</height>
+                        <width>96.418945313</width>
+                        <height>97.283683777</height>
                         <depth>0</depth>
-                        <hotspotX>0.50190115</hotspotX>
-                        <hotspotY>0.5</hotspotY>
+                        <hotspotX>0.488789231</hotspotX>
+                        <hotspotY>0.50222224</hotspotY>
                         <angle>0</angle>
                         <opacity>1</opacity>
                     </world>
