--- a/game/Layouts/MAIN.xml
+++ b/game/Layouts/MAIN.xml
@@ -1211,7 +1211,7 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>1184</x>
+                        <x>1179</x>
                         <y>244</y>
                         <z>0</z>
                         <width>96</width>
@@ -1249,7 +1249,7 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>1184</x>
+                        <x>1181</x>
                         <y>460</y>
                         <z>0</z>
                         <width>96</width>
@@ -1287,7 +1287,7 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>96</x>
+                        <x>99</x>
                         <y>460</y>
                         <z>0</z>
                         <width>96</width>
@@ -1325,7 +1325,7 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>96</x>
+                        <x>97</x>
                         <y>244</y>
                         <z>0</z>
                         <width>96</width>
@@ -1334,6 +1334,28 @@
                         <hotspotX>0.5</hotspotX>
                         <hotspotY>0.5</hotspotY>
                         <angle>-1.570796371</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
+                <instance type="spExit" uid="59">
+                    <properties>
+                        <initial-visibility>Invisible</initial-visibility>
+                        <initial-animation>Default</initial-animation>
+                        <initial-frame>0</initial-frame>
+                        <collisions>Enabled</collisions>
+                    </properties>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>75</x>
+                        <y>46</y>
+                        <z>0</z>
+                        <width>75</width>
+                        <height>57</height>
+                        <depth>0</depth>
+                        <hotspotX>0.50666666</hotspotX>
+                        <hotspotY>0.508771956</hotspotY>
+                        <angle>0</angle>
                         <opacity>1</opacity>
                     </world>
                 </instance>
